Sun May 14 12:20:40 EDT 2006

	cleanup header files.

	gcc-4.1.0 -Wall run: fixed all but two warnings.

	Precompiled headers now work.  Try: "gcc -O2 -g types.h" before
	building.  Saves 15 seconds out of a 95 second build.

Fri May 12 15:39:12 EDT 2006

	fix lattr bugs.

Thu May 11 10:27:47 EDT 2006

	Add skill syntax file.

	Fix semi_comment bug.

	^K E does not now ask to load original for scratch buffers.

	ESC SPACE now consults line number tracking database

	Fix diff highlighter bugs

Tue May  9 11:15:22 EDT 2006

	Fix some compiler warnings.

Mon May  8 15:35:20 EDT 2006

	Convert to proper character set in %x

	Guess encoding.

Fri May  5 10:24:33 EDT 2006

	You can now define which characters can indent paragraphs in joerc
	file: look for '-cpara' in joerc file.

	Allow escape sequences in syntax highlight strings.

	Fix ^L so that it works the first time.

	Fix input redirection.

Wed May  3 21:10:21 EDT 2006

	Better handling of 'joe -'

Wed May  3 16:59:06 EDT 2006

	Improve speed of highlighting.  Now it's comparable to JED's
	highlighter.  (VIM and emacs are 10x slower).

	Also it should now correctly handle the case of two windows open
	on a file, each with a different syntax.

Fri Apr 28 15:07:21 EDT 2006

	Yeah! Xterm-212 now works properly with joe.  The '-joexterm' option
	now works without having to do any patches.

	Note that xterm should be compiled with '--enable-paste64 and
        --enable-256-color'

Tue Mar  7 23:28:47 EST 2006

	Add joe_debug command.  Fix pointer leak (caused paragraph reformat
	to be very slow).

Sun Mar  5 12:46:27 EST 2006

	Fix range of %p

	Allow setting of foreground and background colors.

	Fix search problems with ^ $
	Backward search now moves cursor beginning of insertion point.
	Still need to fix bugs with undo in search.

Sat Mar  4 21:59:22 EST 2006

	Highlight python docstrings the same as regular strings.

	Fix bug with -assume_256color: missing ; in escape sequence

	Fix .php variable highlighting
