@@ -10,7 +10,7 @@
 
 extern unsigned char *exmsg;	/* Exit message */
 extern int help;		/* Set to start with help on */
-extern SCREEN *maint;		/* Primary screen */
+extern Screen *maint;		/* Primary screen */
 extern int usexmouse;		/* Use xterm mouse support? */
 void nungetc PARAMS((int c));
 void dofollows PARAMS((void));
