@@ -7,6 +7,8 @@ Sun May 14 12:20:40 EDT 2006
 	Precompiled headers now work.  Try: "gcc -O2 -g types.h" before
 	building.  Saves 15 seconds out of a 95 second build.
 
+	Change SCREEN to Screen
+
 Fri May 12 15:39:12 EDT 2006
 
 	fix lattr bugs.
